# Supermarket-Check-Out

./: CMakeLists.txt  README.md
data/: data.json
include/: Checkout.h  CustomExceptions.h  Deal.h  Item.h  PurchasedItem.h
src/: Checkout.cpp  Deal.cpp  Item.cpp  PurchasedItem.cpp  main.cpp
tests/: CMakeLists.txt  CheckoutTests.cpp  DealType1Tests.cpp  DealType2Tests.cpp  ItemTests.cpp  PurchasedItemTests.cpp
